# CycleGAN_PyTorch

./: .gitignore  .pre-commit-config.yaml  README.md  Walrus_detection  Walrus_detection.ipynb  glebs_peregon.py  predict.py  pyproject.toml  qq.py  requirements.txt  setup.cfg  test.py  test_image.py  test_video.py  train.py
cyclegan_pytorch/: __init__.py  datasets.py  models.py  optim.py  utils.py
runs/Jun14_12-28-06_vlad-pc/: events.out.tfevents.1655198886.vlad-pc.264618.0
