[tool.poetry]
name = "mock"
version = "0.1.0"
description = ""
authors = [""]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
force_sort_within_sections = true
line_length = 88
order_by_type = false
known_first_party=["app", "src"]

[tool.black]
line-length = 88
exclude = "(^tests/| ^notebooks/)"
skip-string-normalization = true

[tool.poetry.dependencies]
python = ">=3.9,<3.11"


[tool.poetry.dev-dependencies]
black = "^21.4b2"
mypy = "0.941"
flake8 = "3.8.3"
flake8-bugbear = "20.1.4"
flake8-builtins = "1.5.3"
flake8-comprehensions = "3.2.3"
flake8-docstrings = "1.5.0"
flake8-import-order = "0.18.1"
flake8-tidy-imports = "4.1.0"
jupyter = "^1.0.0"
ipykernel = "^6.4.1"
isort = "^5.10.1"
pre-commit = "^2.18.1"
pytest-env = "^0.6.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
