[tool.poetry]
name = "cyclegan-pytorch"
version = "0.1.0"
description = ""
authors = ["Glebbs <glebrost2013@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.3.0"
flake8-black = "^0.3.3"
flake8 = "^4.0.1"
torch = "^1.11.0"
tqdm = "^4.64.0"
numpy = "^1.23.0"
opencv-python = "^4.6.0"
torchvision = "^0.12.0"
Pillow = "^9.1.1"
matplotlib = "^3.5.2"
pre-commit = "^2.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
